fixed issue on taglist alignment

--- a/src/styles/Blog.css
+++ b/src/styles/Blog.css
@@ -11,7 +11,7 @@
 .blogCard{
     width: 16rem;
     padding: 0.2em;
-    margin: 3px;
+    margin: 4px 3px;
   
 }
 
@@ -32,16 +32,22 @@
 }
 
 .blogBody {
-    display: grid!important;
+    /* display: grid!important; */
 }
 
 .card-body{
     padding:0.5rem 0.7rem 1rem 0.7rem!important;
 }
 
+
+.subtitle{
+    display: flex;
+    flex-direction: row;
+    width: min-content;
+}
 .mb-1{
     font-size: 14px!important;
-    display: inline-grid;
-    grid-template-rows: 1fr;
+    /* display: inline-grid; */
+    /* grid-template-rows: 1fr; */
     
 }
